[TEST] API: 댓글, 채팅 조회 Rest DOCS 테스트 추가